overflow fixes

--- a/source/sass/blocks/cards.scss
+++ b/source/sass/blocks/cards.scss
@@ -1,6 +1,7 @@
 .cards__wrapper {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   gap: 35px;
   padding: 30px 30px;
 
