--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -2,14 +2,14 @@
   padding: 0 30px;
 
   @media (min-width: $tablet-width) {
-    padding: 80px 30px 45px 30px;
+    padding: 50px 30px 45px 30px;
     background: url("../img/photos/index/feedback-background-tablet.jpg") no-repeat center left;
     margin-bottom: 157px;
   }
 
   @media (min-width: $desktop-width) {
     max-width: 1050px;
-    padding: 85px 0 92px 175px;
+    padding: 50px 0 92px 175px;
     margin: 0 auto 160px auto;
     background: url("../img/photos/index/feedback-background-tablet.jpg") no-repeat center left;
   }
